vbnc/vbnc/tests/Errors/32105.vb
Namespace Constraint1
    Class A(Of Z As Structure)
        Dim B As A(Of Object)
    End Class
End Namespace